<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PindahDenganObjek">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Data Diri"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ObjekPenerima"
                android:text="@string/objek_yang_diterima"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>

        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jawablah_pertayaan_dibawah_ini"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apakah_makan_favorit_anda"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kolomPertayaan"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/JawabanA"
                android:layout_marginBottom="16dp"
                android:text="@string/bakso"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/JawabanB"
                android:layout_marginBottom="16dp"
                android:text="@string/mie_goreng"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/JawabanC"
                android:layout_marginBottom="16dp"
                android:text="@string/hisana"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/JawabanD"
                android:layout_marginBottom="16dp"
                android:text="@string/rawon_mawut"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Pilih"
                android:text="Pilih"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_red_dark"
                android:textStyle="bold"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>