<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuMain2.KategoriFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/selamat_datang_di_percobaan1_n_ini_halaman_kategori"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/button2"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/menu_main_3"
        android:textColor="@android:color/black"
        android:textStyle="bold" />
</LinearLayout>